--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     
+    <script src="js/tasks.csv"></script>
+    <script src="js/server.js"></script>
+    
     <script src="js/Task.js"></script>
     <script src="js/sendTask.js"></script>
     <script src="js/app.js"></script>
