--- a/task.html
+++ b/task.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Task</title>
 </head>
 <body id="container-send_task">
@@ -69,8 +69,8 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-    <script src="/js/Task.js"></script>
-    <script src="/js/sendTask.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="js/Task.js"></script>
+    <script src="js/sendTask.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
